# runtime-code-tests

./: CMakeLists.txt  LICENSE  README.md
cmake/: add-target.cmake  find-3rd-party.cmake
source/: CMakeLists.txt
source/complicated/: glib-leak.c  sample-lib.c  sample-lib2.c  test-lib-overflow.c  test-lib-overflow2.c
source/include/: asan-options.cpp
source/regular/: data-race.cpp  free-memory.cpp  global-var-overflow.cpp  invalid-addr-write.cpp  invalid-arr-index.cpp  invalid-arr-index2.cpp  invalid-arr-index3.cpp  memory-leak.cpp  memory-leak2.cpp  memory-leak3.c  not-initialised-var-in-if.cpp  not-initialised-var.cpp  stack-buffer-overflow.cpp  stack-use-after-return.cpp  undefined-behaviour.cpp
